test/depCond6_3.slq
def foo(x:ğ”¹,const cond:ğ”¹){
	y:=dup(x);
	z:=0;
	if cond{
		t:=y;
		forget(t); /// error
	}else{
		x:=H(x);
		z=y;
	}
	return (x,z);
}
